Use Java 8 Base64 class instead of `javax.xml.bind.DatatypeConverter`